#2992 Fix tests of CommandLine when running in CI
In CI, other tests may leave content in workspace.
As commandline deals with all projects, these tests must clean the
workspace before execution.
In other cases, some tests use files from commited resources and some
tests modify the content of the workspace. This leads to have
non-repeatable execution.
This commit ensures that those tests use separated resource locations.