@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2020 THALES GLOBAL SERVICES.
+ * Copyright (c) 2017, 2026 THALES GLOBAL SERVICES.
  * 
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -12,15 +12,11 @@
  *******************************************************************************/
 package org.polarsys.capella.test.commandline.ju.testcases;
 
-import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.IPath;
-import org.eclipse.equinox.app.IApplicationContext;
 import org.polarsys.capella.core.commandline.core.CommandLineConstants;
-import org.polarsys.capella.core.validation.commandline.Messages;
 import org.polarsys.capella.core.validation.commandline.ValidationCommandLine;
 import org.polarsys.capella.test.commandline.ju.utils.MockApplicationContext;
 import org.polarsys.capella.test.framework.api.BasicTestCase;
@@ -30,37 +26,34 @@ import org.polarsys.capella.test.framework.api.ModelProviderHelper;
  * Test simulating a Validation launch from command line.
  */
 public class CommandLineValidationTest extends BasicTestCase {
+
+  private static final String PROJECT_NAME = "Test Command Line Validation"; //$NON-NLS-1$
+  private static final String COMMAND_ID = "org.polarsys.capella.core.validation.commandline"; //$NON-NLS-1$
+  
+  
   @Override
-  public void test() throws Exception { 
+  public void test() throws Exception {
     IPath workspaceLocation = ResourcesPlugin.getWorkspace().getRoot().getRawLocation();
-    String projectName = "Test Command Line Validation";
-    File sourceFolder = getFolderInTestModelRepository(projectName);
+
     // Copy test project from the JUnit plugin to the workspace directory
-    ModelProviderHelper.getInstance().importCapellaProject(projectName, sourceFolder);
-    
+    ModelProviderHelper.getInstance().importCapellaProject(getFolderInTestModelRepository(PROJECT_NAME));
+
     // Simulated validation command line
-    String[] validationCommandLineArguments = {
-        CommandLineConstants.ID, "org.polarsys.capella.core.validation.commandline",
-        CommandLineConstants.INPUT, projectName + "/Test Command Line Validation.aird",
-        CommandLineConstants.OUTPUTFOLDER, projectName + "/ValidationResult",
-        CommandLineConstants.FORCEOUTPUTFOLDERCREATION
-    };
-    IApplicationContext mockApplicationContext = new MockApplicationContext(validationCommandLineArguments);
 
-    // Simulate launching from command line
-    ValidationCommandLine validationCommandLine = new ValidationCommandLine();
-    validationCommandLine.parseContext(mockApplicationContext);
+    String airdInput = PROJECT_NAME + "/" + PROJECT_NAME + ".aird";
+    String output = PROJECT_NAME + "/ValidationResult";
+    MockApplicationContext.execute(new ValidationCommandLine(), COMMAND_ID,
+        CommandLineConstants.INPUT, airdInput, // input
+        CommandLineConstants.OUTPUTFOLDER, PROJECT_NAME + "/ValidationResult");
 
-    validationCommandLine.checkArgs(mockApplicationContext);
-    validationCommandLine.prepare(mockApplicationContext);
-    validationCommandLine.execute(mockApplicationContext);
-    
-    // Check we have a result file with the expected validation results    
-    IPath validationResultFile = workspaceLocation.append(projectName).append("ValidationResult").append(projectName).append(projectName + ".aird").append("validation-results.html");
-    byte[] fileContentInBytes = Files.readAllBytes(Paths.get(validationResultFile.toOSString()));
-    String fileContentInString = new String(fileContentInBytes);
-    assertTrue(fileContentInString.contains("DCOM_03") && fileContentInString.contains("TJ_SA_01"));
+    // Check we have a result file with the expected validation results
+    IPath validationResultFile = workspaceLocation
+        .append(output + "/" + airdInput + "/validation-results.html");
+    String validationResult = Files.readString(validationResultFile.toFile().toPath());
+
+    assertTrue(validationResult.contains("DCOM_03") && validationResult.contains("TJ_SA_01"));
     // check the content on the resources column
-    assertTrue(fileContentInString.contains("/Test Command Line Validation/TestCommandLineValidation/Operational Analysis/Operational Activities/Root Operational Activity/OperationalActivity 1"));
+    assertTrue(validationResult.contains(
+        "/Test Command Line Validation/TestCommandLineValidation/Operational Analysis/Operational Activities/Root Operational Activity/OperationalActivity 1"));
   }
 }
